@@ -12,8 +12,7 @@ $instructions = $instructions->instructions;
 $instructions = stripslashes($instructions);		//show html
 
 /* prevent <script> */
-$instructions = str_replace("<script", "<div class='error'><xmp><script", $instructions);
-$instructions = str_replace("</script>", "</script></xmp></div>", $instructions);
+$instructions = $Tools->noxss_html($instructions);
 
 // HSS header
 header('X-XSS-Protection:1; mode=block');
